--- a/app/docs/animated-background/page.mdx
+++ b/app/docs/animated-background/page.mdx
@@ -4,10 +4,10 @@ export const metadata = {
     'Visually highlights selected items by sliding a background into view when hovered over or clicked. This smooth transition helps users focus on the active item, making it ideal for interactive lists, menus, or navigations where clear selection feedback is important.',
 };
 
-import { AnimatedTabs } from '@/components/examples/animated-tabs';
-import { AnimatedTabsHover } from '@/components/examples/animated-tabs-hover';
-import { AnimatedCardBackgroundHover } from '@/components/examples/animated-card-background-hover';
-import { SegmentedControl } from '@/components/examples/segmented-control';
+import { AnimatedTabs } from './animated-tabs';
+import { AnimatedTabsHover } from './animated-tabs-hover';
+import { AnimatedCardBackgroundHover } from './animated-card-background-hover';
+import { SegmentedControl } from './segmented-control';
 import ComponentCodePreview from '@/components/website/component-code-preview';
 import CodeBlock from '@/components/website/code-block';
 
@@ -21,28 +21,28 @@ The `AnimatedBackground` component visually highlights selected items by sliding
 
 <ComponentCodePreview
   component={<AnimatedTabs />}
-  filePath='examples/animated-tabs'
+  filePath='app/docs/animated-background/animated-tabs.tsx'
 />
 
 ### Animated Tabs Hover
 
 <ComponentCodePreview
   component={<AnimatedTabsHover />}
-  filePath='examples/animated-tabs-hover'
+  filePath='app/docs/animated-background/animated-tabs-hover.tsx'
 />
 
 ### Animated Card Background
 
 <ComponentCodePreview
   component={<AnimatedCardBackgroundHover />}
-  filePath='examples/animated-card-background-hover'
+  filePath='app/docs/animated-background/animated-card-background-hover.tsx'
 />
 
 ### Segmented Control
 
 <ComponentCodePreview
   component={<SegmentedControl />}
-  filePath='examples/segmented-control'
+  filePath='app/docs/animated-background/segmented-control.tsx'
 />
 
 ## Code
