--- a/app/docs/border-trail/page.mdx
+++ b/app/docs/border-trail/page.mdx
@@ -4,9 +4,9 @@ export const metadata = {
     'Animated border effect that moves along the edges of its parent container.',
 };
 
-import { BorderTrailCard1 } from '@/components/examples/border-trail-card-1';
-import { BorderTrailCard2 } from '@/components/examples/border-trail-card-2';
-import { BorderTrailTextarea } from '@/components/examples/border-trail-textarea';
+import { BorderTrailCard1 } from './border-trail-card-1';
+import { BorderTrailCard2 } from './border-trail-card-2';
+import { BorderTrailTextarea } from './border-trail-textarea';
 import ComponentCodePreview from '@/components/website/component-code-preview';
 import CodeBlock from '@/components/website/code-block';
 
@@ -20,21 +20,21 @@ Animated border effect that moves along the edges of its parent container.
 
 <ComponentCodePreview
   component={<BorderTrailCard1 />}
-  filePath='examples/border-trail-card-1'
+  filePath='app/docs/border-trail/border-trail-card-1.tsx'
 />
 
 ### Border Trail Loading Card
 
 <ComponentCodePreview
   component={<BorderTrailCard2 />}
-  filePath='examples/border-trail-card-2'
+  filePath='app/docs/border-trail/border-trail-card-2.tsx'
 />
 
 ### Border Trail Textarea
 
 <ComponentCodePreview
   component={<BorderTrailTextarea />}
-  filePath='examples/border-trail-textarea'
+  filePath='app/docs/border-trail/border-trail-textarea.tsx'
 />
 
 ## Code
