--- a/app/docs/dialog/page.mdx
+++ b/app/docs/dialog/page.mdx
@@ -4,9 +4,9 @@ export const metadata = {
     'Display content in a focused view with smooth transitions. Ideal for showcasing details like images and texts in a prominent overlay.',
 };
 
-import { DialogBasicOne } from '@/components/examples/dialog-basic-1';
-import { DialogBasicTwo } from '@/components/examples/dialog-basic-2';
-import { DialogBasicImage } from '@/components/examples/dialog-image';
+import { DialogBasicOne } from './dialog-basic-1';
+import { DialogBasicTwo } from './dialog-basic-2';
+import { DialogBasicImage } from './dialog-image';
 import ComponentCodePreview from '@/components/website/component-code-preview';
 import CodeBlock from '@/components/website/code-block';
 
@@ -20,21 +20,21 @@ A dialog that smoothly transitions content into a focused view using layout anim
 
 <ComponentCodePreview
   component={<DialogBasicOne />}
-  filePath='examples/dialog-basic-1'
+  filePath='app/docs/dialog/dialog-basic-1.tsx'
 />
 
 ### Dialog Basic 2
 
 <ComponentCodePreview
   component={<DialogBasicTwo />}
-  filePath='examples/dialog-basic-2'
+  filePath='app/docs/dialog/dialog-basic-2.tsx'
 />
 
 ### Dialog Image
 
 <ComponentCodePreview
   component={<DialogBasicImage />}
-  filePath='examples/dialog-image'
+  filePath='app/docs/dialog/dialog-image.tsx'
 />
 
 ## Code
