--- a/app/docs/disclosure/page.mdx
+++ b/app/docs/disclosure/page.mdx
@@ -4,8 +4,8 @@ export const metadata = {
     'The Disclosure component allows users to toggle the visibility of content, either collapsed or expanded.',
 };
 
-import { DisclosureBasic } from '@/components/examples/disclosure-basic';
-import { DisclosureCard } from '@/components/examples/disclosure-card';
+import { DisclosureBasic } from './disclosure-basic';
+import { DisclosureCard } from './disclosure-card';
 import ComponentCodePreview from '@/components/website/component-code-preview';
 import CodeBlock from '@/components/website/code-block';
 
@@ -19,7 +19,7 @@ The Disclosure component allows users to toggle the visibility of content, eithe
 
 <ComponentCodePreview
   component={<DisclosureBasic />}
-  filePath='examples/disclosure-basic'
+  filePath='app/docs/disclosure/disclosure-basic.tsx'
   classNameComponentContainer='min-h-0 py-24 lg:px-32 px-8'
 />
 
@@ -29,7 +29,7 @@ Image from [Les others studio](https://www.instagram.com/p/Crvt1j8tybi/?img_inde
 
 <ComponentCodePreview
   component={<DisclosureCard />}
-  filePath='examples/disclosure-card'
+  filePath='app/docs/disclosure/disclosure-card.tsx'
   classNameComponentContainer='min-h-0 py-24 lg:px-32 px-8'
 />
 
