--- a/app/docs/image-comparison/page.mdx
+++ b/app/docs/image-comparison/page.mdx
@@ -3,10 +3,10 @@ export const metadata = {
   description:
     'Interactively compare two images with a draggable slider to reveal differences.',
 };
-import { ImageComparisonBasic } from '@/components/examples/image-comparison-basic';
-import { ImageComparisonHover } from '@/components/examples/image-comparison-hover';
-import { ImageComparisonSpring } from '@/components/examples/image-comparison-spring';
-import { ImageComparisonCustomSlider } from '@/components/examples/image-comparison-custom-slider';
+import { ImageComparisonBasic } from './image-comparison-basic';
+import { ImageComparisonHover } from './image-comparison-hover';
+import { ImageComparisonSpring } from './image-comparison-spring';
+import { ImageComparisonCustomSlider } from './image-comparison-custom-slider';
 import ComponentCodePreview from '@/components/website/component-code-preview';
 import CodeBlock from '@/components/website/code-block';
 
@@ -20,7 +20,7 @@ Interactively compare two images with a draggable slider to reveal differences.
 
 <ComponentCodePreview
   component={<ImageComparisonBasic />}
-  filePath='examples/image-comparison-basic'
+  filePath='app/docs/image-comparison/image-comparison-basic.tsx'
   classNameComponentContainer='px-6 py-24 lg:px-8'
 />
 
@@ -28,7 +28,7 @@ Interactively compare two images with a draggable slider to reveal differences.
 
 <ComponentCodePreview
   component={<ImageComparisonHover />}
-  filePath='examples/image-comparison-hover'
+  filePath='app/docs/image-comparison/image-comparison-hover.tsx'
   classNameComponentContainer='px-6 py-24 lg:px-8'
 />
 
@@ -36,7 +36,7 @@ Interactively compare two images with a draggable slider to reveal differences.
 
 <ComponentCodePreview
   component={<ImageComparisonSpring />}
-  filePath='examples/image-comparison-spring'
+  filePath='app/docs/image-comparison/image-comparison-spring.tsx'
   classNameComponentContainer='px-6 py-24 lg:px-8'
 />
 
@@ -44,7 +44,7 @@ Interactively compare two images with a draggable slider to reveal differences.
 
 <ComponentCodePreview
   component={<ImageComparisonCustomSlider />}
-  filePath='examples/image-comparison-custom-slider'
+  filePath='app/docs/image-comparison/image-comparison-custom-slider.tsx'
   classNameComponentContainer='px-6 py-24 lg:px-8'
 />
 
