--- a/app/docs/infinite-slider/page.mdx
+++ b/app/docs/infinite-slider/page.mdx
@@ -3,9 +3,9 @@ export const metadata = {
   description:
     'Infinite scrolling slider component that smoothly loops through its children. It supports both horizontal and vertical directions, with customizable speed and speed on hover. Ideal for creating continuous carousels, marquee displays, or dynamic content showcases.',
 };
-import { InfiniteSliderBasic } from '@/components/examples/infinite-slider-basic';
-import { InfiniteSliderHoverSpeed } from '@/components/examples/infinite-slider-hover-speed';
-import { InfiniteSliderVertical } from '@/components/examples/infinite-slider-vertical';
+import { InfiniteSliderBasic } from './infinite-slider-basic';
+import { InfiniteSliderHoverSpeed } from './infinite-slider-hover-speed';
+import { InfiniteSliderVertical } from './infinite-slider-vertical';
 import ComponentCodePreview from '@/components/website/component-code-preview';
 import CodeBlock from '@/components/website/code-block';
 
@@ -19,7 +19,7 @@ Infinite scrolling slider component that smoothly loops through its children. It
 
 <ComponentCodePreview
   component={<InfiniteSliderBasic />}
-  filePath='examples/infinite-slider-basic'
+  filePath='app/docs/infinite-slider/infinite-slider-basic.tsx'
   classNameComponentContainer='bg-white'
 />
 
@@ -27,14 +27,14 @@ Infinite scrolling slider component that smoothly loops through its children. It
 
 <ComponentCodePreview
   component={<InfiniteSliderHoverSpeed />}
-  filePath='examples/infinite-slider-hover-speed'
+  filePath='app/docs/infinite-slider/infinite-slider-hover-speed.tsx'
 />
 
 ### Infinite Slider vertical
 
 <ComponentCodePreview
   component={<InfiniteSliderVertical />}
-  filePath='examples/infinite-slider-vertical'
+  filePath='app/docs/infinite-slider/infinite-slider-vertical.tsx'
 />
 
 ## Code
