--- a/app/docs/popover/page.mdx
+++ b/app/docs/popover/page.mdx
@@ -11,7 +11,10 @@ import ComponentCodePreview from '@/components/website/component-code-preview';
 
 A simple popover for quick user interactions over existing content. It pops up on command, and closes easily with a click outside or on a close button.
 
-<ComponentCodePreview component={<Popover />} filePath='core/popover' />
+<ComponentCodePreview
+  component={<Popover />}
+  filePath='components/core/popover.tsx'
+/>
 
 **Please add:**
 
