--- a/app/docs/scroll-progress/page.mdx
+++ b/app/docs/scroll-progress/page.mdx
@@ -4,9 +4,9 @@ export const metadata = {
 };
 
 import { ScrollProgress } from '@/components/core/scroll-progress';
-import { ScrollProgressBasic1 } from '@/components/examples/scroll-progress-basic-1';
-import { ScrollProgressBasic2 } from '@/components/examples/scroll-progress-basic-2';
-import { ScrollProgressBasic3 } from '@/components/examples/scroll-progress-basic-3';
+import { ScrollProgressBasic1 } from './scroll-progress-basic-1';
+import { ScrollProgressBasic2 } from './scroll-progress-basic-2';
+import { ScrollProgressBasic3 } from './scroll-progress-basic-3';
 import ComponentCodePreview from '@/components/website/component-code-preview';
 import CodeBlock from '@/components/website/code-block';
 
@@ -20,21 +20,21 @@ Animated scroll progress for your web pages.
 
 <ComponentCodePreview
   component={<ScrollProgressBasic1 />}
-  filePath='examples/scroll-progress-basic-1'
+  filePath='app/docs/scroll-progress/scroll-progress-basic-1.tsx'
 />
 
 ### Scroll Progress Navigation
 
 <ComponentCodePreview
   component={<ScrollProgressBasic2 />}
-  filePath='examples/scroll-progress-basic-2'
+  filePath='app/docs/scroll-progress/scroll-progress-basic-2.tsx'
 />
 
 ### Scroll Progress Gradient
 
 <ComponentCodePreview
   component={<ScrollProgressBasic3 />}
-  filePath='examples/scroll-progress-basic-3'
+  filePath='app/docs/scroll-progress/scroll-progress-basic-3.tsx'
 />
 
 ## Code
