--- a/app/docs/text-morph/page.mdx
+++ b/app/docs/text-morph/page.mdx
@@ -4,8 +4,8 @@ export const metadata = {
     'Animates text by morphing shared letters between words, creating fluid transitions.',
 };
 
-import { TextMorphButton } from '@/components/examples/text-morph-button';
-import { TextMorphInput } from '@/components/examples/text-morph-input';
+import { TextMorphButton } from './text-morph-button';
+import { TextMorphInput } from './text-morph-input';
 import ComponentCodePreview from '@/components/website/component-code-preview';
 import CodeBlock from '@/components/website/code-block';
 
@@ -19,14 +19,14 @@ Animates text by morphing shared letters between words, creating fluid transitio
 
 <ComponentCodePreview
   component={<TextMorphButton />}
-  filePath='examples/text-morph-button'
+  filePath='app/docs/text-morph/text-morph-button.tsx'
 />
 
 ### Text Morph Input
 
 <ComponentCodePreview
   component={<TextMorphInput />}
-  filePath='examples/text-morph-input'
+  filePath='app/docs/text-morph/text-morph-input.tsx'
   classNameComponentContainer='min-h-[300px] py-24 lg:px-32 px-8 items-end'
 />
 
