--- a/app/docs/text-shimmer/page.mdx
+++ b/app/docs/text-shimmer/page.mdx
@@ -4,8 +4,8 @@ export const metadata = {
     'Shimmer effect on text. Easily adjust the duration and the spread of the shimmer effect.',
 };
 
-import { TextShimmerBasic } from '@/components/examples/text-shimmer-basic';
-import { TextShimmerColor } from '@/components/examples/text-shimmer-color';
+import { TextShimmerBasic } from './text-shimmer-basic';
+import { TextShimmerColor } from './text-shimmer-color';
 import ComponentCodePreview from '@/components/website/component-code-preview';
 import CodeBlock from '@/components/website/code-block';
 
@@ -19,7 +19,7 @@ Shimmer effect on text. Easily adjust the duration and the spread of the shimmer
 
 <ComponentCodePreview
   component={<TextShimmerBasic />}
-  filePath='examples/text-shimmer-basic'
+  filePath='app/docs/text-shimmer/text-shimmer-basic.tsx'
 />
 
 ### Text Shimmer Color
@@ -28,7 +28,7 @@ You can use the `[--base-color]` and `[--base-gradient-color]` CSS variables to 
 
 <ComponentCodePreview
   component={<TextShimmerColor />}
-  filePath='examples/text-shimmer-color'
+  filePath='app/docs/text-shimmer/text-shimmer-color.tsx'
 />
 
 ## Code
