--- a/app/docs/toolbar-dynamic/page.mdx
+++ b/app/docs/toolbar-dynamic/page.mdx
@@ -13,7 +13,7 @@ A toolbar that adjusts its width based on what you need to do. It starts small a
 
 <ComponentCodePreview
   component={<ToolbarDynamic />}
-  filePath='core/toolbar-dynamic'
+  filePath='components/core/toolbar-dynamic.tsx'
 />
 
 **Please add:**
