--- a/app/docs/toolbar-expandable/page.mdx
+++ b/app/docs/toolbar-expandable/page.mdx
@@ -13,7 +13,7 @@ A toolbar that changes its height as needed. It grows to show more content and s
 
 <ComponentCodePreview
   component={<ToolbarExpandable />}
-  filePath='core/toolbar-expandable'
+  filePath='components/core/toolbar-expandable.tsx'
 />
 
 **Please add:**
