--- a/app/docs/transition-panel/page.mdx
+++ b/app/docs/transition-panel/page.mdx
@@ -4,8 +4,8 @@ export const metadata = {
     "Easy way to switch between different pieces of content with enter and exit animations. It's perfect for enhancing user experience in areas such as onboarding card, settings adjustments, or any interactive content that requires a visual transition between states.",
 };
 
-import { TabsTransitionPanel } from '@/components/examples/transition-panel-tabs';
-import { TransitionPanelCard } from '@/components/examples/transition-panel-card';
+import { TabsTransitionPanel } from './transition-panel-tabs';
+import { TransitionPanelCard } from './transition-panel-card';
 import ComponentCodePreview from '@/components/website/component-code-preview';
 import CodeBlock from '@/components/website/code-block';
 
@@ -20,7 +20,7 @@ Easy way to switch between different pieces of content with enter and exit anima
 <ComponentCodePreview
   classNameComponentContainer='p-20'
   component={<TabsTransitionPanel />}
-  filePath='examples/transition-panel-tabs'
+  filePath='app/docs/transition-panel/transition-panel-tabs.tsx'
 />
 
 ### Card with Transition Panel
@@ -28,7 +28,7 @@ Easy way to switch between different pieces of content with enter and exit anima
 <ComponentCodePreview
   classNameComponentContainer='p-4'
   component={<TransitionPanelCard />}
-  filePath='examples/transition-panel-card'
+  filePath='app/docs/transition-panel/transition-panel-card.tsx'
 />
 
 ## Code
