--- a/app/docs/dock/page.mdx
+++ b/app/docs/dock/page.mdx
@@ -4,8 +4,7 @@ export const metadata = {
     'A versatile UI element that provides a flexible and customizable way to organize and display menu items within your application.',
 };
 
-import Dock from '@/components/core/dock';
-import { AppleStyleDock } from '@/components/examples/apple-style-dock';
+import { AppleStyleDock } from './apple-style-dock';
 import ComponentCodePreview from '@/components/website/component-code-preview';
 import CodeBlock from '@/components/website/code-block';
 
@@ -19,7 +18,7 @@ A versatile UI element that provides a flexible and customizable way to organize
 
 <ComponentCodePreview
   component={<AppleStyleDock />}
-  filePath='examples/apple-style-dock'
+  filePath='app/docs/dock/apple-style-dock.tsx'
   hasReTrigger
 />
 
